--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brandon Robinson's Contact</title>
 </head>
+<style>
+    body {
+        background-color: rgb(63, 129, 134)
+    }
+</style>
+
 <body>
    <table>
        <Thead>
@@ -32,7 +38,7 @@
                 <td>Node.js</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
-            <tr></tr>
+            <tr>
                 <td>CSS</td>
                 <td>⭐⭐⭐</td>
             </tr>
@@ -74,5 +80,7 @@
         <textarea name="Your Message" id="" cols="60" rows="15"></textarea><br>
         <input type="submit" value="Submit">
      </form>
+     <br>
+     <a href="index.html">Return to Homepage</a>
     </body>
 </html>
