--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brandon Robinson's Website</title>
 </head>
+<style>
+    body {
+        background-color: rgb(63, 129, 134);
+    }    
+</style>
+
+
+
+
 <body>
 <Table cellspacing="25">
     <tr>
-        <td><img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.18169-0/p206x206/12308414_136098363420520_6891886488411026153_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=da31f3&_nc_ohc=xIvQr0X2GfoAX_cJGuX&_nc_ht=scontent-lga3-1.xx&tp=6&oh=80deadf074b191b9721cb5302fc657ae&oe=60CBAE16" alt="Brandon's Profile Picture"></td>
+        <td><img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.6435-0/p206x206/107383560_1136724113357935_6483767764234998470_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=da31f3&_nc_ohc=G1GwaxOnLDAAX8-3Pp8&_nc_oc=AQmjaWQS6YR02BhNrpjRDPJryd8x8UPwwe0JC-XGWMN_Dd6l98k9n9CR60jMvrHF8Bc&_nc_ht=scontent-lga3-1.xx&tp=6&oh=30eda122978ae08bdeb2ec466ea1051b&oe=60D4D40C" alt="Brandon's Profile Picture"></td>
         <td><H1>Brandon Robinson</H1>
         <p><em>Pharmacy worker at <a href="https://www1.nyc.gov/site/doc/about/facilities.page"><em><strong>Rikers Island</strong></em></a> and <strong>Beginner Software Programmer</strong></em></p>
         <p>Learning programming is fun and can't wait to get my first job in it.</p></td>
