--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brandon Robinson's Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<style>
-    body {
-        background-color: rgb(63, 129, 134)
-    }
-</style>
-
 <body>
    <table>
        <Thead>
@@ -24,7 +19,7 @@
                <td>BRboinson424@gmail.com</td>
            </tr>
    </table>
-   <hr size="4" noshade>
+   <hr>
    <h3>Skills list:</h3>
    <table>
     <tr>
@@ -70,7 +65,7 @@
         </td>
     </tr>
     </table>    
-    <hr size="4" noshade>
+    <hr>
     <form action="Mailto:Robinsob8@nychhc.org" method="post" enctype="text/plain">
         <label for="">Your Name:</label><br>
         <input type="text" name="Your Name"><br>
