--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brandon Robinson's Website</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<style>
-    body {
-        background-color: rgb(63, 129, 134);
-    }    
-</style>
-
-
-
-
 <body>
 <Table cellspacing="25">
     <tr>
@@ -24,7 +16,7 @@
         <p>Learning programming is fun and can't wait to get my first job in it.</p></td>
     </tr>
 </Table> 
-   <hr size=4 noshade>
+   <hr>
    <h3>Courses that will be taken</h3>
    <ul>
        <li> <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2021 Web Development Bootcamp</a></li>
@@ -32,6 +24,7 @@
        <li> <a href="https://www.udemy.com/course/the-complete-sql-bootcamp/">The Complete SQL Bootcamp 2021: Go from Zero to Hero</a></li>
        <li> <a href="https://www.udemy.com/course/complete-python-bootcamp/">2021 Complete Python Bootcamp From Zero to Hero</a></li>
    </ul>
+   <hr>
    <h3>What I will be learning in my first course in order</h3>
    <ol>
        <li>Html</li>
@@ -45,6 +38,7 @@
        <li>MongoDB</li>
        <li>Mongoose</li>
    </ol>
+   <hr>
    <h3>Questions</h3>
         <a href="contact.html">Contact Me</a>
 </body>
